<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="275dp"
            android:layout_height="259dp"
            android:id="@+id/imageView"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/wisielec1"
            app:srcCompat="@drawable/wisielec1"
            app:layout_constraintVertical_bias="0.53" />

    <TextView
            android:layout_width="276dp"
            android:layout_height="38dp"
            android:id="@+id/wordTV"
            android:layout_marginBottom="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.25" />

    <TextView
            android:layout_width="73dp"
            android:layout_height="183dp"
            android:id="@+id/usedLetters"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="45sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="30dp"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.22" />


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordTV"
            app:layout_constraintHorizontal_bias="0.58"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.90999997">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:textAlignment="center"><![CDATA[>

            ]]>

            <Button
                    android:text="@string/a"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/A"
                    android:onClick="key" />

            <Button
                    android:text="@string/b"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/B"
                    android:onClick="key" />

            <Button
                    android:text="@string/c"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/C"
                    android:onClick="key" />

            <Button
                    android:text="@string/d"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/D"
                    android:onClick="key" />

            <Button
                    android:text="@string/e"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/E"
                    android:onClick="key" />

            <Button
                    android:text="@string/f"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/F"
                    android:onClick="key" />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/g"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/G"
                    android:onClick="key" />

            <Button
                    android:text="@string/h"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/H"
                    android:onClick="key" />

            <Button
                    android:text="@string/i"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/I"
                    android:onClick="key" />

            <Button
                    android:text="@string/j"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/J"
                    android:onClick="key" />

            <Button
                    android:text="@string/k"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/K"
                    android:onClick="key" />

            <Button
                    android:text="@string/l"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/L"
                    android:onClick="key" />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="39dp">

            <Button
                    android:text="@string/m"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/M"
                    android:onClick="key"
                    android:layout_marginBottom="24dp" />

            <Button
                    android:text="@string/n"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/N"
                    android:onClick="key" />

            <Button
                    android:text="@string/o"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/O"
                    android:onClick="key" />

            <Button
                    android:text="@string/p"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/P"
                    android:onClick="key" />

            <Button
                    android:text="@string/r"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/r"
                    android:onClick="key" />

            <Button
                    android:text="@string/s"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/S"
                    android:onClick="key" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:textAlignment="center">

            <Button
                    android:text="@string/t"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/T"
                    android:onClick="key" />

            <Button
                    android:text="@string/u"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/U"
                    android:onClick="key" />

            <Button
                    android:text="@string/w"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/W"
                    android:onClick="key"
                    android:layout_marginBottom="64dp" />

            <Button
                    android:text="@string/y"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/Y"
                    android:onClick="key" />

            <Button
                    android:text="@string/z"
                    android:layout_width="53dp"
                    android:layout_height="35dp"
                    android:id="@+id/Z"
                    android:onClick="key" />

        </LinearLayout>

    </LinearLayout>


    <Button
            android:text="@string/check"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkButton"
            android:layout_marginBottom="328dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="checkClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usedLetters"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/wordTV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkButton"
            android:layout_marginEnd="104dp"
            app:layout_constraintVertical_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            android:id="@+id/textView" />

</android.support.constraint.ConstraintLayout>